# hellouvulkan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  buildshaders.sh  buildwindowsshaders.bat  buildwindowsshaders_new.bat  buildwindowsshaders_new.sh  buildwindowsshaders_optimize.bat  imgui.ini  launch.vs.json  paths.sh  todolist.txt
draw_stuff_vulkan/: CMakeLists.txt
draw_stuff_vulkan/src/: main_draw_stuff_vulkan.cpp
font_draw/: CMakeLists.txt
font_draw/src/: main_font_draw.cpp
font_draw_vulkan/: CMakeLists.txt
font_draw_vulkan/src/: main_font_draw_vulkan.cpp
font_render/: CMakeLists.txt
font_render/src/: main_font_renderer.cpp
font_render_vulkan/: CMakeLists.txt
font_render_vulkan/src/: main_font_renderer_vulkan.cpp
mylibs/: CMakeLists.txt
mylibs/core/: app.cpp  app.h  camera.cpp  camera.h  general.cpp  general.h  json.cpp  json.h  mytypes.h  timer.cpp  transform.h  vulkan_app.cpp  vulkan_app.h
mylibs/math/: general_math.h  matrix.cpp  matrix.h  plane.h  quaternion.cpp  quaternion.h  vector3.cpp  vector3.h
mylibs/myvulkan/: myvulkan.cpp  myvulkan.h  vulkandevice.cpp  vulkandevice.h  vulkanhelperfuncs.h  vulkanmemorymanager.cpp  vulkanmemorymanager.h  vulkanresource.cpp  vulkanresource.h  vulkanshader.cpp  vulkanshader.h  vulkanswapchain.cpp  vulkanswapchain.h  vulkglob.h
mylibs/ogl/: shader.cpp  shader.h  shaderbuffer.cpp  shaderbuffer.h
mylibs/render/: font_render.cpp  font_render.h
space_shooter/: CMakeLists.txt
space_shooter/src/: main_space_shooter.cpp
space_shooter_vulkan/: CMakeLists.txt
space_shooter_vulkan/src/: main_space_shooter_vulkan.cpp
src/: CMakeLists.txt  carpfont.cpp
src/common/: CMakeLists.txt
src/common/src/: common_project.cpp  common_project.h
src/common_project/: CMakeLists.txt
src/common_project/common_project/: common_project.cpp  common_project.h
src/compute_test_vulkan/: CMakeLists.txt
src/compute_test_vulkan/src/: compute_test_vulkan.cpp
src/draw_stuff_vulkan/: CMakeLists.txt
src/draw_stuff_vulkan/src/: main_draw_stuff_vulkan.cpp
src/editor_test/: CMakeLists.txt
src/editor_test/src/: editor_test.cpp
src/font_draw_vulkan/: CMakeLists.txt
src/font_draw_vulkan/src/: main_font_draw_vulkan.cpp
src/font_render_vulkan/: CMakeLists.txt
src/font_render_vulkan/src/: main_font_renderer_vulkan.cpp
src/game/: CMakeLists.txt
src/game/src/: game.cpp
src/imgui_test/: CMakeLists.txt
src/imgui_test/src/: imgui_test.cpp
src/mylibs/: CMakeLists.txt  mylibscomponents.def  pch.h
src/mylibs/app/: inputapp.cpp  inputapp.h  vulkan_app.cpp  vulkan_app.h
src/mylibs/audio/: myaudio.cpp  myaudio.h
src/mylibs/components/: componentmacros.h  components.cpp  components.h  transform.cpp  transform.h  transform_functions.h
src/mylibs/container/: arraysliceview.h  bytebuffer.cpp  bytebuffer.h  mymemory.cpp  mymemory.h  podvector.h  podvectorsbase.h  podvectortype.cpp  podvectortype.h  podvectortypedefine.h  stackstring.h  string.cpp  string.h  stringview.cpp  stringview.h  vector.h  vectorbase.h  vectorsbase.h
src/mylibs/core/: assert.h  camera.cpp  camera.h  file.cpp  file.h  general.cpp  general.h  glfw_keys.h  image.cpp  json.cpp  json.h  log.h  mytypes.h  nullable.h  podtype.h  supa.h  timer.cpp  timer.h  transform.h  uninittype.h  vulkan_app.cpp  vulkan_app.h  writejson.cpp  writejson.h
src/mylibs/gpu/: gpustructs.h
src/mylibs/gui/: componentviews.cpp  componentviews.h  editorsystem.cpp  editorsystem.h  examplegui.cpp  examplegui.h  gameentityview.cpp  guiutil.cpp  guiutil.h  transformview.cpp
src/mylibs/math/: bounds.h  general_math.h  hitpoint.h  matrix.cpp  matrix.h  matrix_inline_functions.h  plane.h  quaternion.cpp  quaternion.h  quaternion_inline_functions.h  ray.cpp  ray.h  sphere.h  vector3.cpp  vector3.h  vector3_inline_functions.h
src/mylibs/model/: animation.cpp  animation.h  gltf.cpp  gltf.h
src/mylibs/mygui/: mygui.cpp  mygui.h
src/mylibs/myvulkan/: myvma.cpp  myvulkan.cpp  myvulkan.h  renderpass.h  shader.cpp  shader.h  uniformbuffermanager.cpp  uniformbuffermanager.h  vulkanglobal.h  vulkanhelperfuncs.h  vulkaninitparameters.cpp  vulkaninitparameters.h  vulkanresources.cpp  vulkanresources.h  vulkglob.h
src/mylibs/render/: convertrendertarget.cpp  convertrendertarget.h  font_render.cpp  font_render.h  fontrendersystem.cpp  fontrendersystem.h  lightingrendertargets.cpp  lightingrendertargets.h  lightrendersystem.cpp  lightrendersystem.h  lightsystem.h  linerendersystem.cpp  linerendersystem.h  meshrendersystem.cpp  meshrendersystem.h  meshrendertargets.cpp  meshrendertargets.h  meshsystem.cpp  meshsystem.h  myimgui.cpp  myimgui.h  myimguirenderer.cpp  myimguirenderer.h  tonemaprendersystem.cpp  tonemaprendersystem.h  viewport.h
src/mylibs/resources/: animationresource.h  globalresources.cpp  globalresources.h
src/mylibs/scene/: gameentity.cpp  gameentity.h  scene.cpp  scene.h
src/mylibs/systems/: camerasystem.cpp  camerasystem.h
src/serialize_component/: CMakeLists.txt  generated_header.cpp  generated_header.h  test.def  testcmake2.cmake
src/serialize_component/src/: components.cpp  components.h  components_macro.h  serialize.h  serialize_component.cpp
src/sound_test/: CMakeLists.txt
src/sound_test/src/: sound_test.cpp
src/sound_test_dsound/: CMakeLists.txt
src/sound_test_dsound/src/: sound_test_dsound.cpp
src/sound_test_pulse/: CMakeLists.txt
src/sound_test_pulse/src/: sound_pulse.cpp
src/space_shooter_vulkan/: CMakeLists.txt
src/space_shooter_vulkan/src/: main_space_shooter_vulkan.cpp
src/tests/: CMakeLists.txt  main_test.cpp  matrixtest.cpp  matrixtest.h  string_test.cpp  testfuncs.h  vectormathtest.cpp  vectortest.cpp
src/vulkan_test/: CMakeLists.txt
src/vulkan_test/src/: camera.cpp  compilemainv3.bat  fontsystem.cpp  main_vulkan_test.cpp  model.cpp  model.h
vulkan_test/: CMakeLists.txt
vulkan_test/src/: camera.cpp  camera.h  fontsystem.h  keyhandler.cpp  keyhandler.h  main_vulkan_test.cpp  model.cpp  model.h  timer.cpp  timer.h  transform.h
vulkan_test/src/myvulkan/: vulkanresource.cpp  (+2 more)
(+87 files in other folders)
